# Doctor-view

./: .replit  README.md  app.py  database.py  pyproject.toml
templates/: home.html  login.html  patient_data.html
