[tool.poetry]
name = "repl-nix-doctor-view"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_doctor_view"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
mysql-connector-python = "^8.3.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
